--- a/templates/aws_baseline/aws-landing-zone-notifications.template
+++ b/templates/aws_baseline/aws-landing-zone-notifications.template
@@ -6,6 +6,13 @@ Parameters:
     Type: String
     Default: CloudTrail/DefaultLogGroup
     Description: Enter CloudWatch Logs log group name. Default is CloudTrail/DefaultLogGroup
+  EnableUnauthorizedORAccessDeniedAlarm:
+    Type: String
+    Description: "Enable alarm for unauthorized operation OR access denided?"
+    Default: true
+    AllowedValues:
+    - true
+    - false
   EnableSecurityGroupChangeAlarm:
     Type: String
     Description: "Enable alarm for security group changes?"
@@ -89,6 +96,9 @@ Parameters:
     Description: "Local Admin SNS Topic for Landing Zone"
     
 Conditions:
+  EnableUnauthorizedORAccessDenied: !Equals
+    - !Ref EnableUnauthorizedORAccessDeniedAlarm
+    - 'true'
   EnableSecurityGroupChange: !Equals
     - !Ref EnableSecurityGroupChangeAlarm
     - 'true'
@@ -125,6 +135,13 @@ Conditions:
 
 
 Resources:
+  CloudTrailOperationFileter:
+    Type: AWS::Logs::MetricFilter
+    Condition: EnableUnauthorizedORAccessDeniedAlarm
+    Properties:
+      LogGroupName:
+        Ref: LogGroupName
+      FilterPattern: "{ ($.errorCode = "*UnauthorizedOperation") || ($.errorCode = "AccessDenied*") }"
   SecurityGroupChangesMetricFilter:
     Type: AWS::Logs::MetricFilter
     Condition: EnableSecurityGroupChange
