--- a/templates/aws_baseline/aws-landing-zone-notifications.template
+++ b/templates/aws_baseline/aws-landing-zone-notifications.template
@@ -6,6 +6,13 @@ Parameters:
     Type: String
     Default: CloudTrail/DefaultLogGroup
     Description: Enter CloudWatch Logs log group name. Default is CloudTrail/DefaultLogGroup
+  EnableLoginWithoutMFAAlarm:
+    Type: String
+    Description: "Enable alarm for Login without MFA?"
+    Default: true
+    AllowedValues:
+    - true
+    - false
   EnableAWSConfigChangeAlarm:
     Type: String
     Description: "Enable alarm for AWS config changes?"
@@ -96,6 +103,9 @@ Parameters:
     Description: "Local Admin SNS Topic for Landing Zone"
     
 Conditions:
+  EnableLoginWithoutMFA: !Equals
+    - !Ref EnableLoginWithoutMFAAlarm
+    - 'true'
   EnableAWSConfigChange: !Equals
     - !Ref EnableAWSConfigChangeAlarm
     - 'true'
@@ -135,6 +145,38 @@ Conditions:
 
 
 Resources:
+  LoginWithoutMFAMetricFilter:
+    Type: AWS::Logs::MetricFilter
+    Condition: EnableLoginWithoutMFA
+    Properties:
+      LogGroupName:
+        Ref: LogGroupName
+      FilterPattern: '{ ($.eventName = "ConsoleLogin") && ($.additionalEventData.MFAUsed != "Yes") }'
+      MetricTransformations:
+      - MetricNamespace: CloudTrailMetrics
+        MetricName: LoginWithoutMFACount
+        MetricValue: '1'
+  LoginWithoutMFAAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W28
+            reason: "The alarm name is defined to identify AWS Landing Zone resources."
+    Condition: EnableLoginWithoutMFA
+    Properties:
+      AlarmName: AWSConfigChangesAlarm
+      AlarmDescription: Alarm when an login without MFA to AWS.
+      AlarmActions:
+      - !Ref SNSNotificationTopic
+      MetricName: LoginWithoutMFACount
+      Namespace: CloudTrailMetrics
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      EvaluationPeriods: '1'
+      Period: '300'
+      Statistic: Sum
+      Threshold: '1'
+      TreatMissingData: notBreaching
   AWSConfigChangesMetricFilter:
     Type: AWS::Logs::MetricFilter
     Condition: EnableAWSConfigChange
